@@ -24,6 +24,16 @@ are set in the new project (See also the <a href="property.html">property task</
 <p>You can also set properties in the new project from the old project by
 using nested property tags. These properties are always passed regardless of the
 setting of <i>inheritAll</i>.  This allows you to parameterize your subprojects.</p>
+
+<p>References to data types will also be passed to the new project by
+default, but they will not override references defined in the new
+project.  You can limit the references you want to copy by setting the
+<i>inheritall</i> attribute to <code>false</code> and using nested
+reference elements.  The nested elements can also be used to copy
+references from the calling project to the new project under a
+different id.  References taken from nested elements will override
+existing references in the new project.</p>
+
 <h3>Parameters</h3>
 <table border="1" cellpadding="2" cellspacing="0">
   <tr>
@@ -60,15 +70,41 @@ setting of <i>inheritAll</i>.  This allows you to parameterize your subprojects.
     <td align="center" valign="top">No</td>
   </tr>
   <tr>
-    <td valign="top">inheritAll</td>
-    <td valign="top">If <code>true</code>, pass all properties to the new Ant
-    project.  Defaults to <code>true</code>.
+    <td valign="top">inheritAll</td> <td valign="top">If
+    <code>true</code>, pass all properties and references to the new
+    Ant project.  Defaults to <code>true</code>.
     </td>
     <td align="center" valign="top">No</td>
   </tr>
 </table>
 
-<h4>Basedir of the new project</h4>
+<h3>Parameters specified as nested elements</h3>
+<h4>property</h4>
+<p>See the description of the <a href="property.html">property task</a>.</p>
+
+<h4>reference</h4>
+<p>Used to chose references that shall be copied into the new project,
+optionally changing their id.</p>
+
+<table border="1" cellpadding="2" cellspacing="0">
+  <tr>
+    <td valign="top"><b>Attribute</b></td>
+    <td valign="top"><b>Description</b></td>
+    <td align="center" valign="top"><b>Required</b></td>
+  </tr>
+  <tr>
+    <td valign="top">refid</td>
+    <td valign="top">The id of the reference in the calling project.</td>
+    <td valign="top" align="center">Yes</td>
+  </tr>
+  <tr>
+    <td valign="top">toid</td>
+    <td valign="top">The id of the reference in the new project.</td>
+    <td valign="top" align="center">No, defaults to the value of refid.</td>
+  </tr>
+</table>
+
+<h3>Basedir of the new project</h3>
 
 <p>The basedir value of the new project is affected by the two
 attributes dir and inheritall, see the following table for
@@ -119,6 +155,60 @@ details:</p>
     &lt;property name=&quot;output.type&quot; value=&quot;html&quot;/&gt;
   &lt;/ant&gt;
 </pre>
+
+<p>The build file of the calling project defines some
+<code>&lt;path&gt;</code> elements like this:</p>
+
+<pre>
+  &lt;path id="path1"&gt;
+    ...
+  &lt;/&gt;
+  &lt;path id="path2"&gt;
+    ...
+  &lt;/&gt;
+</pre>
+
+<p>and the called build file (<code>subbuild.xml</code>) also defines
+a <code>&lt;path&gt;</code> with the id <code>path1</code>, but
+<code>path2</code> is not defined:</p>
+
+<pre>
+  &lt;ant antfile=&quot;subbuild.xml&quot; /&gt;
+</pre>
+
+<p>will not override <code>subbuild</code>'s definition of
+<code>path1</code>, but make the parent's definition of
+<code>path2</code> available in the subbuild. As does:</p>
+
+<pre>
+  &lt;ant antfile=&quot;subbuild.xml&quot; inheritall=&quot;true&quot; /&gt;
+</pre>
+
+<pre>
+  &lt;ant antfile=&quot;subbuild.xml&quot; inheritall=&quot;false&quot; /&gt;
+</pre>
+
+<p>will neither override <code>path1</code> nor copy
+<code>path2</code>.</p>
+
+<pre>
+  &lt;ant antfile=&quot;subbuild.xml&quot; inheritall=&quot;false&quot; &gt;
+    &lt;reference refid=&quot;path1&quot; /&gt;
+  &lt;/ant&gt;
+</pre>
+
+<p>will override <code>subbuild</code>'s definition of
+<code>path1</code>.</p>
+
+<pre>
+  &lt;ant antfile=&quot;subbuild.xml&quot; inheritall=&quot;false&quot; &gt;
+    &lt;reference refid=&quot;path1&quot; torefid=&quot;path2&quot; /&gt;
+  &lt;/ant&gt;
+</pre>
+
+<p>will copy the parent's definition of <code>path1</code> into the
+new project using the id <code>path2</code>.</p>
+
 <hr>
 <p align="center">Copyright &copy; 2000,2001 Apache Software Foundation. All rights
 Reserved.</p>
